[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/player_attack.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerAttack.gd" type="Script" id=2]
[ext_resource path="res://Sound/Hurt2.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 52.0

[node name="AttackArea" type="Area2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.96875, 1.96875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 6 )
shape = SubResource( 1 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="EnemyHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0

[connection signal="area_entered" from="." to="." method="_on_AttackArea_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
